fixed aligning the navbar text to the center.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -221,6 +221,7 @@ h1 {
 
 .small-text .title {
 	font-size: 80%;
+	text-align: center;
 }
 /*********** END Navbar **************/
 /*********** Twitter ***********/
